--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
+body{
   text-align: center;
-}
+  background-color: rgb(212, 249, 212);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  color: green;
+  margin: 0px;
+  padding: 0px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.searchBox{
+  width: 70vw;
+  height: 40px;
+  text-align: center;
+  font-size: 1.1rem;
+  margin: 5px auto;
+  border-radius: 20px;
+  border: none;
+}
+table{
+  width: 80vw;
+  text-align: left;
+  border-collapse: collapse;
+  margin-left: 10vw;
+}
+tr{
+  border-bottom: 1px solid green;
+  height: 50px;
+}
+.actions{
   display: flex;
-  flex-direction: column;
+  gap: 20px;
+  color: green;
+  height: 40px;
+  justify-content: start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.buttons{
+  display: flex;
+  height: 50px;
+  margin-top: 20px;
+  width: 80vw;
+  gap: 15vw;
+  margin-left: 10vw;
+}
+.deletebtn button{
+  background-color: red;
+  color: white;
+  width: auto;
+  padding: 4px 14px;
+  
+}
+button{
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: none;
+  background-color: green;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.paginationbtn{
+  display: flex;
+  gap: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button:disabled{
+  color: green;
+  background-color: white;
+  border: 1px solid green;
+}
+.currentPage{
+  color: green;
+  background-color: white;
+  border: 1px solid green;
+}
+.updatebtn{
+  color: white;
+  background-color: green;
+  height: 40px;
+  width: 100px;
+  margin-top: 5px;
+}
+@media screen and (max-width:768px) {
+  .buttons{
+    display: flex;
+    flex-direction:column;
+    gap: 1px;
   }
-  to {
-    transform: rotate(360deg);
+  th:nth-child(3){
+    display: none;
+  }
+  td:nth-child(3){
+    display: none;
   }
 }
